--- a/TheLastFacepuncher/TheLastFacepuncher/TheLastFacepuncher.csproj
+++ b/TheLastFacepuncher/TheLastFacepuncher/TheLastFacepuncher.csproj
@@ -10,7 +10,8 @@
     <RootNamespace>TheLastFacepuncher</RootNamespace>
     <AssemblyName>TheLastFacepuncher</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>HiDef</XnaProfile>
@@ -91,9 +92,13 @@
     <Reference Include="mscorlib">
       <Private>False</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>.\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
@@ -108,6 +113,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FacepunchApi\FpApi.cs" />
+    <Compile Include="FacepunchApi\FpPost.cs" />
+    <Compile Include="FacepunchApi\FpThread.cs" />
+    <Compile Include="FacepunchApi\PostSubmitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="TLFPGame.cs" />
@@ -147,6 +156,9 @@
       <ProductName>Microsoft XNA Framework Redistributable 4.0</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
