--- a/TheLastFacepuncher/TheLastFacepuncher/TheLastFacepuncher.csproj
+++ b/TheLastFacepuncher/TheLastFacepuncher/TheLastFacepuncher.csproj
@@ -117,8 +117,11 @@
     <Compile Include="FacepunchApi\FpPost.cs" />
     <Compile Include="FacepunchApi\FpThread.cs" />
     <Compile Include="FacepunchApi\PostSubmitter.cs" />
+    <Compile Include="Level.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Room.cs" />
+    <Compile Include="Tile.cs" />
     <Compile Include="TLFPGame.cs" />
   </ItemGroup>
   <ItemGroup>
