--- a/TheLastFacepuncher/TheLastFacepuncher/TheLastFacepuncher.csproj
+++ b/TheLastFacepuncher/TheLastFacepuncher/TheLastFacepuncher.csproj
@@ -62,6 +62,9 @@
     <XnaCompressContent>true</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GeeUI">
+      <HintPath>.\GeeUI.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
     </Reference>
@@ -118,10 +121,13 @@
     <Compile Include="FacepunchApi\FpThread.cs" />
     <Compile Include="FacepunchApi\PostSubmitter.cs" />
     <Compile Include="Level.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Room.cs" />
     <Compile Include="Tile.cs" />
+    <Compile Include="Tiles\BlankTile.cs" />
+    <Compile Include="Tiles\Wall.cs" />
     <Compile Include="TLFPGame.cs" />
   </ItemGroup>
   <ItemGroup>
